Sorting on title working.

--- a/classroom/src/app/bubble-chart/bubble-chart.component.html
+++ b/classroom/src/app/bubble-chart/bubble-chart.component.html
@@ -42,7 +42,7 @@
         #documentSort="matSort"
         [dataSource]="tableData"
       >
-        <ng-container matColumnDef="name" sticky>
+        <ng-container matColumnDef="title" sticky>
           <mat-header-cell *matHeaderCellDef mat-sort-header>
             Name
           </mat-header-cell>
