--- a/classroom/src/app/patterns/patterns.component.html
+++ b/classroom/src/app/patterns/patterns.component.html
@@ -1,108 +1,74 @@
-<div class="tool">
-  <app-nav></app-nav>
-  <mat-card class="container">
-    <mat-card-title>Patterns</mat-card-title>
-    <mat-card-subtitle>
-      Breakdown of the number of instances of each category across all
-      documents.
-    </mat-card-subtitle>
-    <mat-card-subtitle> Click on a category to expand it. </mat-card-subtitle>
-    <mat-card-content class="patterns_container">
-      <app-sunburst-chart [data]="sundata"></app-sunburst-chart>
-      <mat-tree
-        [dataSource]="treeData"
-        [treeControl]="treeControl"
-        class="tree"
-      >
-        <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-          <li class="mat-tree-node tree-node">
+<mat-card>
+  <mat-card-title>Patterns</mat-card-title>
+  <mat-card-subtitle>
+    Breakdown of the number of instances of each category across all
+    documents.
+  </mat-card-subtitle>
+  <mat-card-subtitle> Click on a category to expand it. </mat-card-subtitle>
+  <mat-card-content class="patterns_container">
+    <app-sunburst-chart [data]="sundata"></app-sunburst-chart>
+    <mat-tree [dataSource]="treeData" [treeControl]="treeControl" class="tree">
+      <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+        <li class="mat-tree-node tree-node">
+          <div>
+            <button mat-icon-button disabled></button>
+            <ng-container [ngTemplateOutlet]="patternlabel" [ngTemplateOutletContext]="{ row: node }"></ng-container>
+          </div>
+          <div>{{ node.count }}</div>
+        </li>
+      </mat-tree-node>
+      <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+        <li>
+          <div class="mat-tree-node tree-node">
             <div>
-              <button mat-icon-button disabled></button>
-              <ng-container
-                [ngTemplateOutlet]="patternlabel"
-                [ngTemplateOutletContext]="{ row: node }"
-              ></ng-container>
+              <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.label">
+                <mat-icon class="mat-icon-rtl-mirror">
+                  {{
+                  treeControl.isExpanded(node)
+                  ? 'expand_more'
+                  : 'chevron_right'
+                  }}
+                </mat-icon>
+              </button>
+              <ng-container [ngTemplateOutlet]="patternlabel" [ngTemplateOutletContext]="{ row: node }"></ng-container>
+            </div>
+            <div [class.tree-node-invisible]="treeControl.isExpanded(node)">
+              {{ node.count }}
+            </div>
+          </div>
+          <ul [class.tree-node-invisible]="!treeControl.isExpanded(node)">
+            <ng-container matTreeNodeOutlet></ng-container>
+          </ul>
+        </li>
+      </mat-nested-tree-node>
+      <mat-tree-node *matTreeNodeDef="let node; when: hasPatterns">
+        <li [style.width]="'100%'">
+          <div class="mat-tree-node tree-node">
+            <div>
+              <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.label">
+                <mat-icon class="mat-icon-rtl-mirror">
+                  {{
+                  treeControl.isExpanded(node)
+                  ? 'expand_more'
+                  : 'chevron_right'
+                  }}
+                </mat-icon>
+              </button>
+              <ng-container [ngTemplateOutlet]="patternlabel" [ngTemplateOutletContext]="{ row: node }"></ng-container>
             </div>
             <div>{{ node.count }}</div>
-          </li>
-        </mat-tree-node>
-        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-          <li>
-            <div class="mat-tree-node tree-node">
-              <div>
-                <button
-                  mat-icon-button
-                  matTreeNodeToggle
-                  [attr.aria-label]="'Toggle ' + node.label"
-                >
-                  <mat-icon class="mat-icon-rtl-mirror">
-                    {{
-                      treeControl.isExpanded(node)
-                        ? 'expand_more'
-                        : 'chevron_right'
-                    }}
-                  </mat-icon>
-                </button>
-                <ng-container
-                  [ngTemplateOutlet]="patternlabel"
-                  [ngTemplateOutletContext]="{ row: node }"
-                ></ng-container>
-              </div>
-              <div [class.tree-node-invisible]="treeControl.isExpanded(node)">
-                {{ node.count }}
-              </div>
-            </div>
-            <ul [class.tree-node-invisible]="!treeControl.isExpanded(node)">
-              <ng-container matTreeNodeOutlet></ng-container>
-            </ul>
-          </li>
-        </mat-nested-tree-node>
-        <mat-tree-node *matTreeNodeDef="let node; when: hasPatterns">
-          <li [style.width]="'100%'">
-            <div class="mat-tree-node tree-node">
-              <div>
-                <button
-                  mat-icon-button
-                  matTreeNodeToggle
-                  [attr.aria-label]="'Toggle ' + node.label"
-                >
-                  <mat-icon class="mat-icon-rtl-mirror">
-                    {{
-                      treeControl.isExpanded(node)
-                        ? 'expand_more'
-                        : 'chevron_right'
-                    }}
-                  </mat-icon>
-                </button>
-                <ng-container
-                  [ngTemplateOutlet]="patternlabel"
-                  [ngTemplateOutletContext]="{ row: node }"
-                ></ng-container>
-              </div>
-              <div>{{ node.count }}</div>
-            </div>
-            <div
-              [class.pattern-table]="true"
-              [class.tree-node-invisible]="!treeControl.isExpanded(node)"
-            >
-              <app-patterns-table
-                [patterns]="node.patterns"
-              ></app-patterns-table>
-            </div>
-          </li>
-        </mat-tree-node>
-      </mat-tree>
-    </mat-card-content>
-  </mat-card>
-</div>
+          </div>
+          <div [class.pattern-table]="true" [class.tree-node-invisible]="!treeControl.isExpanded(node)">
+            <app-patterns-table [patterns]="node.patterns"></app-patterns-table>
+          </div>
+        </li>
+      </mat-tree-node>
+    </mat-tree>
+  </mat-card-content>
+</mat-card>
 <ng-template #patternlabel let-row="row">
   {{ row.label }}
-  <button
-    *ngIf="row.help"
-    mat-icon-button
-    matTooltip="{{ row.help }}"
-    matTooltipPosition="after"
-  >
+  <button *ngIf="row.help" mat-icon-button matTooltip="{{ row.help }}" matTooltipPosition="after">
     <mat-icon class="tooltip-icon">comment</mat-icon>
   </button>
 </ng-template>
