--- a/classroom/src/app/bubble-chart/bubble-chart.component.html
+++ b/classroom/src/app/bubble-chart/bubble-chart.component.html
@@ -1,94 +1,64 @@
-<div class="tool">
-  <app-nav></app-nav>
-  <mat-card *ngIf="corpus" class="container">
-    <mat-card-title>Bubble Chart</mat-card-title>
-    <mat-card-subtitle>
-      Units are average number of instances per {{ unit }} words.
-    </mat-card-subtitle>
-    <mat-card-subtitle *ngIf="scale">
-      Scale:
-      <svg
-        [attr.width]="maxRadius * 7 + 'px'"
-        [attr.height]="maxRadius * 2 + 'px'"
-      >
-        <g *ngFor="let tick of scale.ticks(4).slice(1); index as i">
-          <circle
-            class="tick"
-            [attr.data-value]="tick"
-            [attr.cy]="maxRadius"
-            [attr.cx]="scale(tick) + legend_offset(i)"
-            [attr.r]="scale(tick)"
-          />
-          <text
-            class="tick"
-            [attr.y]="maxRadius"
-            [attr.x]="scale(tick) + legend_offset(i)"
-          >
-            {{ tick * unit }}
-          </text>
-        </g>
-      </svg>
-    </mat-card-subtitle>
-    <mat-card-content>
-      <mat-label>Level to display:</mat-label>
-      <mat-button-toggle-group [(value)]="depth">
-        <mat-button-toggle value="Category">Category</mat-button-toggle>
-        <mat-button-toggle value="Subcategory">Subcategory</mat-button-toggle>
-        <mat-button-toggle value="Cluster">Cluster</mat-button-toggle>
-      </mat-button-toggle-group>
-      <mat-table
-        *ngIf="data && dictionary"
-        matSort
-        #documentSort="matSort"
-        [dataSource]="tableData"
-      >
-        <ng-container matColumnDef="title" sticky>
-          <mat-header-cell *matHeaderCellDef mat-sort-header>
-            Name
-          </mat-header-cell>
-          <mat-cell *matCellDef="let doc">
-            <a
-              [ngClass]="{
+<mat-card *ngIf="corpus">
+  <mat-card-title>Bubble Chart</mat-card-title>
+  <mat-card-subtitle>
+    Units are average number of instances per {{ unit }} words.
+  </mat-card-subtitle>
+  <mat-card-subtitle *ngIf="scale">
+    Scale:
+    <svg [attr.width]="maxRadius * 7 + 'px'" [attr.height]="maxRadius * 2 + 'px'">
+      <g *ngFor="let tick of scale.ticks(4).slice(1); index as i">
+        <circle class="tick" [attr.data-value]="tick" [attr.cy]="maxRadius" [attr.cx]="scale(tick) + legend_offset(i)"
+          [attr.r]="scale(tick)" />
+        <text class="tick" [attr.y]="maxRadius" [attr.x]="scale(tick) + legend_offset(i)">
+          {{ tick * unit }}
+        </text>
+      </g>
+    </svg>
+  </mat-card-subtitle>
+  <mat-card-content>
+    <mat-label>Level to display:</mat-label>
+    <mat-button-toggle-group [(value)]="depth">
+      <mat-button-toggle value="Category">Category</mat-button-toggle>
+      <mat-button-toggle value="Subcategory">Subcategory</mat-button-toggle>
+      <mat-button-toggle value="Cluster">Cluster</mat-button-toggle>
+    </mat-button-toggle-group>
+    <table mat-table *ngIf="data && dictionary" matSort #documentSort="matSort" [dataSource]="tableData">
+      <ng-container matColumnDef="title" sticky>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Name
+        </th>
+        <td mat-cell *matCellDef="let doc">
+          <a [ngClass]="{
                 name_entry: true,
                 model_entry: doc.ownedby === 'instructor'
-              }"
-              (click)="open(doc.id)"
-            >
-              {{ doc.title }}
-            </a>
-          </mat-cell>
-        </ng-container>
+              }" (click)="open(doc.id)"
+              matTooltip="{{ doc.title }}">
+            {{ doc.title }}
+          </a>
+        </td>
+      </ng-container>
 
-        <ng-container
-          *ngFor="let category of dictionary.nodes"
-          matColumnDef="{{ category.name ?? category.label }}"
-        >
-          <mat-header-cell *matHeaderCellDef>{{
-            category.label
-          }}</mat-header-cell>
-          <mat-cell *matCellDef="let doc">
-            <ng-container
-              [ngTemplateOutlet]="bubble"
-              [ngTemplateOutletContext]="{ cell: getCell(doc, category) }"
-            >
-            </ng-container>
-          </mat-cell>
-        </ng-container>
+      <ng-container *ngFor="let category of dictionary.nodes" matColumnDef="{{ category.name ?? category.label }}">
+        <th mat-header-cell *matHeaderCellDef class="bubble-col"><span matTooltip="{{ category.path }}">{{
+          category.label
+          }}</span></th>
+        <td mat-cell *matCellDef="let doc" class="bubble-col">
+          <ng-container [ngTemplateOutlet]="bubble" [ngTemplateOutletContext]="{ cell: getCell(doc, category) }">
+          </ng-container>
+        </td>
+      </ng-container>
 
-        <mat-header-row
-          *matHeaderRowDef="columns; sticky: stickyHeader"
-        ></mat-header-row>
-        <mat-row *matRowDef="let row; columns: columns"></mat-row>
-      </mat-table>
-    </mat-card-content>
-  </mat-card>
-</div>
+      <tr mat-header-row *matHeaderRowDef="columns; sticky: stickyHeader"></tr>
+      <tr mat-row *matRowDef="let row; columns: columns"></tr>
+    </table>
+  </mat-card-content>
+</mat-card>
 <ng-template #bubble let-cell="cell">
   <svg
     [attr.width]="maxRadius * 2 + 'px'"
     [attr.height]="maxRadius * 2 + 'px'"
     [attr.data-value]="cell"
-    matTooltip="{{ cell.title }} - {{ cell.category }}: {{
+    matTooltip="{{ cell.title }} - {{ cell.path }}: {{
       cell.value.toFixed(2)
     }}"
   >
