Adds entry path. Uses > instead of / for path separator.

--- a/classroom/src/app/scatterplot/scatterplot.component.scss
+++ b/classroom/src/app/scatterplot/scatterplot.component.scss
@@ -7,7 +7,7 @@
 .axis_selection {
   align-content: center;
   display: grid;
-  grid-template-columns: 24em 24em;
+  grid-template-columns: auto auto;
   column-gap: 1em;
   /*justify-content: space-around;*/
   margin-left: 0em;
