Refactors rank to frequency.
To better match use and functionality rank components are renamed to
frequency.
Organizes imports.

--- a/classroom/src/app/boxplot/boxplot.component.html
+++ b/classroom/src/app/boxplot/boxplot.component.html
@@ -105,12 +105,12 @@
       </mat-tree>
     </div>
     <!--<div>
-        <app-rank-graph
+        <app-frequency-graph
           *ngIf="selected_category"
           [data]="data"
           [category]="selected_category"
           [unit]="unit"
-        ></app-rank-graph>
+        ></app-frequency-graph>
       </div>-->
   </mat-card-content>
 </mat-card>
