--- a/classroom/src/app/bubble-chart/bubble-chart.component.html
+++ b/classroom/src/app/bubble-chart/bubble-chart.component.html
@@ -31,17 +31,17 @@
           <a [ngClass]="{
                 name_entry: true,
                 model_entry: doc.ownedby === 'instructor'
-              }" (click)="open(doc.id)"
-              matTooltip="{{ doc.title }}">
+              }" (click)="open(doc.id)" matTooltip="{{ doc.title }}">
             {{ doc.title }}
           </a>
         </td>
       </ng-container>
 
       <ng-container *ngFor="let category of dictionary.nodes" matColumnDef="{{ category.name ?? category.label }}">
-        <th mat-header-cell *matHeaderCellDef class="bubble-col"><span matTooltip="{{ category.path }}">{{
-          category.label
-          }}</span></th>
+        <th mat-header-cell *matHeaderCellDef class="bubble-col"><span matTooltip="{{ category.path }}"
+            matTooltipPosition="above">{{
+            category.label
+            }}</span></th>
         <td mat-cell *matCellDef="let doc" class="bubble-col">
           <ng-container [ngTemplateOutlet]="bubble" [ngTemplateOutletContext]="{ cell: getCell(doc, category) }">
           </ng-container>
@@ -54,18 +54,12 @@
   </mat-card-content>
 </mat-card>
 <ng-template #bubble let-cell="cell">
-  <svg
-    [attr.width]="maxRadius * 2 + 'px'"
+  <svg [attr.width]="maxRadius * 2 + 'px'"
     [attr.height]="maxRadius * 2 + 'px'"
     [attr.data-value]="cell"
-    matTooltip="{{ cell.title }} - {{ cell.path }}: {{
-      cell.value.toFixed(2)
-    }}"
-  >
-    <circle
-      [attr.cx]="maxRadius"
-      [attr.cy]="maxRadius"
-      [attr.r]="cell.proportion"
-    />
+    matTooltipPosition="after"
+    [matTooltipClass]="'linebreaking'"
+    [matTooltip]="genTooltip(cell)">
+    <circle [attr.cx]="maxRadius" [attr.cy]="maxRadius" [attr.r]="cell.proportion" />
   </svg>
 </ng-template>
