--- a/classroom/src/app/comparison/comparison.component.html
+++ b/classroom/src/app/comparison/comparison.component.html
@@ -6,74 +6,46 @@
       Colors will start to repeat after {{ max_clusters }} selections:
     </mat-card-subtitle>
     <mat-card-content>
-      <mat-tree
-        [dataSource]="treeData"
-        [treeControl]="treeControl"
-        class="tree"
-      >
+      <mat-tree [dataSource]="treeData" [treeControl]="treeControl" class="tree">
         <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
           <li class="mat-tree-node tree-node">
             <div>
               <button mat-icon-button disabled></button>
-              <mat-checkbox
-                [checked]="selection.isSelected(node)"
-                (click)="$event.stopPropagation()"
-                [value]="node"
-                [disabled]="node.max_count === 0"
-                [aria-label]="node.label"
-              >
-                <ng-container
-                  [ngTemplateOutlet]="patternlabel"
-                  [ngTemplateOutletContext]="{ row: node }"
-                ></ng-container>
+              <mat-checkbox [checked]="selection.isSelected(node)" (click)="$event.stopPropagation()" [value]="node"
+                [disabled]="node.max_count === 0" [aria-label]="node.label">
+                <ng-container [ngTemplateOutlet]="patternlabel" [ngTemplateOutletContext]="{ row: node }">
+                </ng-container>
               </mat-checkbox>
             </div>
             <!--<div>{{ node.counts }}</div>-->
-            <ng-container
-              [ngTemplateOutlet]="patterncount"
-              [ngTemplateOutletContext]="{ row: node }"
-            ></ng-container>
+            <ng-container [ngTemplateOutlet]="patterncount" [ngTemplateOutletContext]="{ row: node }"></ng-container>
           </li>
         </mat-tree-node>
         <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
           <li>
             <div class="mat-tree-node tree-node">
               <div>
-                <button
-                  mat-icon-button
-                  matTreeNodeToggle
-                  [attr.aria-label]="'Toggle ' + node.label"
-                >
+                <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.label">
                   <mat-icon class="mat-icon-rtl-mirror">
                     {{
-                      treeControl.isExpanded(node)
-                        ? 'expand_more'
-                        : 'chevron_right'
+                    treeControl.isExpanded(node)
+                    ? 'expand_more'
+                    : 'chevron_right'
                     }}
                   </mat-icon>
                 </button>
-                <mat-checkbox
-                  [checked]="descendantsAllSelected(node)"
-                  [indeterminate]="descendantsPartiallySelected(node)"
-                  (click)="$event.stopPropagation()"
-                  (change)="selectionChange($event, node)"
-                  [disabled]="node.max_count === 0"
-                  [value]="node"
-                  [aria-label]="node.label"
-                >
-                  <ng-container
-                    [ngTemplateOutlet]="patternlabel"
-                    [ngTemplateOutletContext]="{ row: node }"
-                  ></ng-container>
+                <mat-checkbox [checked]="descendantsAllSelected(node)"
+                  [indeterminate]="descendantsPartiallySelected(node)" (click)="$event.stopPropagation()"
+                  (change)="selectionChange($event, node)" [disabled]="node.max_count === 0" [value]="node"
+                  [aria-label]="node.label">
+                  <ng-container [ngTemplateOutlet]="patternlabel" [ngTemplateOutletContext]="{ row: node }">
+                  </ng-container>
                 </mat-checkbox>
               </div>
               <!--<div [class.d_none]="treeControl.isExpanded(node)">
                 {{ node.counts }}
               </div>-->
-              <ng-container
-                [ngTemplateOutlet]="patterncount"
-                [ngTemplateOutletContext]="{ row: node }"
-              ></ng-container>
+              <ng-container [ngTemplateOutlet]="patterncount" [ngTemplateOutletContext]="{ row: node }"></ng-container>
             </div>
             <ul [class.d_none]="!treeControl.isExpanded(node)">
               <ng-container matTreeNodeOutlet></ng-container>
@@ -84,47 +56,27 @@
           <li [style.width]="'100%'">
             <div class="mat-tree-node tree-node">
               <div>
-                <button
-                  mat-icon-button
-                  matTreeNodeToggle
-                  [attr.aria-label]="'Toggle ' + node.label"
-                >
+                <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.label">
                   <mat-icon class="mat-icon-rtl-mirror">
                     {{
-                      treeControl.isExpanded(node)
-                        ? 'expand_more'
-                        : 'chevron_right'
+                    treeControl.isExpanded(node)
+                    ? 'expand_more'
+                    : 'chevron_right'
                     }}
                   </mat-icon>
                 </button>
-                <mat-checkbox
-                  [checked]="selection.isSelected(node)"
-                  (click)="$event.stopPropagation()"
-                  (change)="selectionLeafChange($event, node)"
-                  [value]="node"
-                  [disabled]="node.max_count === 0"
-                  [aria-label]="node.label"
-                >
-                  <ng-container
-                    [ngTemplateOutlet]="patternlabel"
-                    [ngTemplateOutletContext]="{ row: node }"
-                  ></ng-container>
+                <mat-checkbox [checked]="selection.isSelected(node)" (click)="$event.stopPropagation()"
+                  (change)="selectionLeafChange($event, node)" [value]="node" [disabled]="node.max_count === 0"
+                  [aria-label]="node.label">
+                  <ng-container [ngTemplateOutlet]="patternlabel" [ngTemplateOutletContext]="{ row: node }">
+                  </ng-container>
                 </mat-checkbox>
               </div>
               <!--<div>{{ node.counts }}</div>-->
-              <ng-container
-                [ngTemplateOutlet]="patterncount"
-                [ngTemplateOutletContext]="{ row: node }"
-              ></ng-container>
+              <ng-container [ngTemplateOutlet]="patterncount" [ngTemplateOutletContext]="{ row: node }"></ng-container>
             </div>
-            <div
-              [class.pattern-table]="true"
-              [class.d_none]="!treeControl.isExpanded(node)"
-            >
-              <app-compare-patterns-table
-                [patterns]="node.patterns"
-                [colors]="dColors"
-              >
+            <div [class.pattern-table]="true" [class.d_none]="!treeControl.isExpanded(node)">
+              <app-compare-patterns-table [patterns]="node.patterns" [colors]="dColors">
               </app-compare-patterns-table>
             </div>
           </li>
@@ -145,21 +97,14 @@
     </nav>
     <main *ngIf="documents" class="text_cards">
       <as-split unit="percent" [direction]="direction">
-        <as-split-area
-          *ngFor="let doc of documents.documents; index as i"
-          [style.overflow]="'hidden'"
-        >
+        <as-split-area *ngFor="let doc of documents.documents; index as i" [style.overflow]="'hidden'">
           <div class="document_entry">
             <div class="text_head" [style.background]="doc_colors(doc.text_id)">
               <span>ID:&nbsp;{{ doc.text_id }}</span>
               <span>Owner:&nbsp;{{ doc.owner }}</span>
             </div>
             <div class="document_body">
-              <article
-                class="text_content"
-                [innerHTML]="html_content[i]"
-                (click)="click_select($event)"
-              ></article>
+              <article class="text_content" [innerHTML]="html_content[i]" (click)="click_select($event)"></article>
             </div>
           </div>
         </as-split-area>
@@ -167,62 +112,31 @@
     </main>
   </div>
   <ng-container *ngIf="is_safari && documents">
-    <main
-      class="safari_entry"
-      *ngFor="let doc of documents.documents; index as i"
-    >
+    <main class="safari_entry" *ngFor="let doc of documents.documents; index as i">
       <div class="safari_head" [style.background]="doc_colors(doc.text_id)">
         <span>ID:&nbsp;{{ doc.text_id }}</span>
         <span>Owner:&nbsp;{{ doc.owner }}</span>
       </div>
-      <article
-        class="text_content"
-        [innerHTML]="html_content[i]"
-        (click)="click_select($event)"
-      ></article>
+      <article class="text_content" [innerHTML]="html_content[i]" (click)="click_select($event)"></article>
     </main>
   </ng-container>
 </div>
 
 <ng-template #patternlabel let-row="row">
   <span [class]="getCategories(row)">{{ row.label }}</span>
-  <button
-    *ngIf="row.help"
-    mat-icon-button
-    matTooltip="{{ row.help }}"
-    matTooltipPosition="after"
-  >
+  <button *ngIf="row.help" mat-icon-button matTooltip="{{ row.help }}" matTooltipPosition="after">
     <mat-icon class="tooltip-icon">comment</mat-icon>
   </button>
 </ng-template>
 <ng-template #patterncount let-row="row">
-  <div
-    [class.d_none]="!hasPatterns(0, row) && treeControl.isExpanded(row)"
-    matTooltip="{{ row.count }}: {{ row.counts[0] }} vs {{ row.counts[1] }}"
-    matTooltipPosition="after"
-  >
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      [style.width]="'80px'"
-      [style.height]="'32px'"
-    >
+  <div [class.d_none]="!hasPatterns(0, row) && treeControl.isExpanded(row)"
+    matTooltip="{{ row.count }}: {{ row.counts[0] }} vs {{ row.counts[1] }}" matTooltipPosition="after">
+    <svg xmlns="http://www.w3.org/2000/svg" [style.width]="'80px'" [style.height]="'32px'">
       <desc>{{ row.counts.join(' vs ') }}</desc>
-      <rect
-        [attr.x]="50 - row.left(max_count) + '%'"
-        y="7"
-        height="18"
-        [attr.width]="row.left(max_count) + '%'"
-        [attr.fill]="dColors[0]"
-        stroke-width="1"
-      />
-      <rect
-        x="50%"
-        y="7"
-        height="18"
-        [attr.width]="row.right(max_count) + '%'"
-        [attr.fill]="dColors[1]"
-        stroke-width="1"
-      />
+      <rect [attr.x]="50 - row.left(max_count) + '%'" y="7" height="18" [attr.width]="row.left(max_count) + '%'"
+        [attr.fill]="dColors[0]" stroke-width="1" />
+      <rect x="50%" y="7" height="18" [attr.width]="row.right(max_count) + '%'" [attr.fill]="dColors[1]"
+        stroke-width="1" />
       <line stroke="black" x1="50%" x2="50%" y1="0" y2="32" />
     </svg>
   </div>
