Fixes misalligned boxplots #38
Also updates to Angular 13.
Still need updates to some of the dependencies.

--- a/classroom/src/app/about/about.component.scss
+++ b/classroom/src/app/about/about.component.scss
@@ -1,5 +1,5 @@
 @use 'sass:map';
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 @import '../../cmu-app-theme.scss';
 
 $color-config: mat.get-color-config($cmu-theme);
