--- a/classroom/src/styles.scss
+++ b/classroom/src/styles.scss
@@ -1,5 +1,5 @@
 /* angular material */
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
 /* fonts */
 // Currently, it is better to use link in index.html to load foreign resoruces.
