--- a/classroom/src/app/boxplot/boxplot.component.html
+++ b/classroom/src/app/boxplot/boxplot.component.html
@@ -67,7 +67,7 @@
             </ul>
           </li>
         </mat-nested-tree-node>
-        <mat-tree-node *matTreeNodeDef="let node; when: hasDocuments">
+        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasDocuments">
           <li>
             <div class="mat-tree-node tree-node">
               <div>
@@ -101,7 +101,7 @@
               </li>
             </ul>
           </li>
-        </mat-tree-node>
+        </mat-nested-tree-node>
       </mat-tree>
     </div>
     <!--<div>
